[gd_scene load_steps=2 format=2]

[ext_resource path="res://control/stop_watch/clock.gd" type="Script" id=1]

[node name="Clock" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}
clock_mode = 1

[node name="Panel" type="Panel" parent="."]
margin_right = 215.0
margin_bottom = 83.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TimeLabel" type="Label" parent="Panel/HBoxContainer"]
margin_top = 34.0
margin_right = 72.0
margin_bottom = 48.0
size_flags_horizontal = 3
text = "00:00"
align = 1

[node name="ButtonStart" type="Button" parent="Panel/HBoxContainer"]
margin_left = 76.0
margin_right = 117.0
margin_bottom = 83.0
text = "Start"

[node name="ButtonStop" type="Button" parent="Panel/HBoxContainer"]
margin_left = 121.0
margin_right = 161.0
margin_bottom = 83.0
text = "Stop"

[node name="ButtonPauseToggle" type="Button" parent="Panel/HBoxContainer"]
margin_left = 165.0
margin_right = 215.0
margin_bottom = 83.0
text = "Pause"

[connection signal="button_up" from="Panel/HBoxContainer/ButtonStart" to="." method="_on_ButtonStart_button_up"]
[connection signal="button_up" from="Panel/HBoxContainer/ButtonStop" to="." method="_on_ButtonStop_button_up"]
[connection signal="button_up" from="Panel/HBoxContainer/ButtonPauseToggle" to="." method="_on_ButtonPause_button_up"]
